--- a/DDAYGO/ViewController/My/Setting/ChangePassword/ResetPasswordViewController.xib
+++ b/DDAYGO/ViewController/My/Setting/ChangePassword/ResetPasswordViewController.xib
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
-    <device id="retina5_5" orientation="portrait">
+    <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -21,20 +21,20 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kS9-Qv-1yZ">
-                    <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                     <subviews>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="原有密码：" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ToX-ek-tM4">
-                            <rect key="frame" x="16" y="28" width="77" height="30"/>
+                            <rect key="frame" x="16" y="65" width="77" height="30"/>
                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                             <color key="textColor" red="0.098039217289999994" green="0.098039217289999994" blue="0.098039217289999994" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入原有密码" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="DEa-pl-ok6">
-                            <rect key="frame" x="105" y="50" width="299" height="25"/>
+                            <rect key="frame" x="105" y="87" width="205" height="25"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="25" id="blw-Mz-0Iv"/>
                             </constraints>
@@ -43,20 +43,20 @@
                             <textInputTraits key="textInputTraits"/>
                         </textField>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VAk-lq-VP7">
-                            <rect key="frame" x="16" y="75" width="398" height="1"/>
+                            <rect key="frame" x="16" y="112" width="304" height="1"/>
                             <color key="backgroundColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="1" id="dLW-ZS-ZJc"/>
                             </constraints>
                         </view>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="新密码：" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="BCS-k8-ID2">
-                            <rect key="frame" x="16" y="78" width="62" height="30"/>
+                            <rect key="frame" x="16" y="115" width="62" height="30"/>
                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                             <color key="textColor" red="0.098039217289999994" green="0.098039217289999994" blue="0.098039217289999994" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请输入新密码" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="s7I-ni-Y2i">
-                            <rect key="frame" x="105" y="100" width="299" height="25"/>
+                            <rect key="frame" x="105" y="137" width="205" height="25"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="25" id="MIU-6R-S9f"/>
                             </constraints>
@@ -65,20 +65,20 @@
                             <textInputTraits key="textInputTraits"/>
                         </textField>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Viv-WD-9oE">
-                            <rect key="frame" x="16" y="125" width="398" height="1"/>
+                            <rect key="frame" x="16" y="162" width="304" height="1"/>
                             <color key="backgroundColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="1" id="JGu-4M-nPk"/>
                             </constraints>
                         </view>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="确认新密码：" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xp2-pG-42t">
-                            <rect key="frame" x="16" y="134" width="92" height="30"/>
+                            <rect key="frame" x="16" y="171" width="92" height="30"/>
                             <fontDescription key="fontDescription" type="system" pointSize="15"/>
                             <color key="textColor" red="0.098039217289999994" green="0.098039217289999994" blue="0.098039217289999994" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="请再次输入新密码" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Q35-gy-pnv">
-                            <rect key="frame" x="105" y="156" width="299" height="25"/>
+                            <rect key="frame" x="105" y="193" width="205" height="25"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="25" id="JJc-hs-6Zw"/>
                             </constraints>
@@ -87,29 +87,14 @@
                             <textInputTraits key="textInputTraits"/>
                         </textField>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6ND-Oq-2XJ">
-                            <rect key="frame" x="16" y="181" width="398" height="1"/>
+                            <rect key="frame" x="16" y="218" width="304" height="1"/>
                             <color key="backgroundColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="1" id="Vl5-zt-Zim"/>
                             </constraints>
                         </view>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bAm-gR-yLu">
-                            <rect key="frame" x="16" y="275" width="382" height="38"/>
-                            <color key="backgroundColor" red="0.9519919753074646" green="0.62955361604690552" blue="0.319538414478302" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="38" id="QSW-Z4-tu7"/>
-                            </constraints>
-                            <state key="normal" title="确定">
-                                <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                            </state>
-                            <userDefinedRuntimeAttributes>
-                                <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                                    <integer key="value" value="5"/>
-                                </userDefinedRuntimeAttribute>
-                            </userDefinedRuntimeAttributes>
-                        </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="chg-R9-Ydb">
-                            <rect key="frame" x="16" y="212" width="90" height="25"/>
+                            <rect key="frame" x="16" y="249" width="90" height="25"/>
                             <constraints>
                                 <constraint firstAttribute="height" constant="25" id="Xs9-Yf-bni"/>
                                 <constraint firstAttribute="width" constant="90" id="tTU-g3-ngc"/>
@@ -124,6 +109,21 @@
                                 <action selector="showpwAction:" destination="-1" eventType="touchUpInside" id="T8K-ar-7Lw"/>
                             </connections>
                         </button>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="bAm-gR-yLu">
+                            <rect key="frame" x="16" y="312" width="288" height="38"/>
+                            <color key="backgroundColor" red="0.9519919753074646" green="0.62955361604690552" blue="0.319538414478302" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="38" id="QSW-Z4-tu7"/>
+                            </constraints>
+                            <state key="normal" title="确定">
+                                <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                            </state>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                    <integer key="value" value="5"/>
+                                </userDefinedRuntimeAttribute>
+                            </userDefinedRuntimeAttributes>
+                        </button>
                     </subviews>
                     <constraints>
                         <constraint firstItem="Viv-WD-9oE" firstAttribute="leading" secondItem="Xp2-pG-42t" secondAttribute="leading" id="4Ax-ci-FMg"/>
@@ -135,8 +135,8 @@
                         <constraint firstItem="Viv-WD-9oE" firstAttribute="top" secondItem="BCS-k8-ID2" secondAttribute="bottom" constant="17" id="ANK-tY-GlH"/>
                         <constraint firstItem="VAk-lq-VP7" firstAttribute="top" secondItem="DEa-pl-ok6" secondAttribute="bottom" id="DjC-ku-wib"/>
                         <constraint firstItem="chg-R9-Ydb" firstAttribute="leading" secondItem="6ND-Oq-2XJ" secondAttribute="leading" id="G8H-fo-TeS"/>
-                        <constraint firstItem="DEa-pl-ok6" firstAttribute="top" secondItem="kS9-Qv-1yZ" secondAttribute="top" constant="50" id="IaS-wz-9ua"/>
-                        <constraint firstAttribute="bottom" secondItem="bAm-gR-yLu" secondAttribute="bottom" constant="255" id="Ioz-o6-xjR"/>
+                        <constraint firstItem="DEa-pl-ok6" firstAttribute="top" secondItem="kS9-Qv-1yZ" secondAttribute="top" constant="87" id="IaS-wz-9ua"/>
+                        <constraint firstAttribute="bottom" secondItem="bAm-gR-yLu" secondAttribute="bottom" constant="218" id="Ioz-o6-xjR"/>
                         <constraint firstItem="6ND-Oq-2XJ" firstAttribute="top" secondItem="Q35-gy-pnv" secondAttribute="bottom" id="Irc-Mh-tlB"/>
                         <constraint firstItem="chg-R9-Ydb" firstAttribute="leading" secondItem="bAm-gR-yLu" secondAttribute="leading" id="Juv-xf-xpm"/>
                         <constraint firstItem="6ND-Oq-2XJ" firstAttribute="top" secondItem="Xp2-pG-42t" secondAttribute="bottom" constant="17" id="Jvk-jM-IMK"/>
@@ -147,7 +147,7 @@
                         <constraint firstItem="Viv-WD-9oE" firstAttribute="top" secondItem="s7I-ni-Y2i" secondAttribute="bottom" id="UFN-5G-ckn"/>
                         <constraint firstItem="BCS-k8-ID2" firstAttribute="top" secondItem="VAk-lq-VP7" secondAttribute="bottom" constant="2" id="UcD-0I-nhx"/>
                         <constraint firstAttribute="trailing" secondItem="DEa-pl-ok6" secondAttribute="trailing" constant="10" id="W55-Ff-yKj"/>
-                        <constraint firstItem="ToX-ek-tM4" firstAttribute="top" secondItem="kS9-Qv-1yZ" secondAttribute="topMargin" id="YYn-5G-gpX"/>
+                        <constraint firstItem="ToX-ek-tM4" firstAttribute="top" secondItem="kS9-Qv-1yZ" secondAttribute="topMargin" constant="37" id="YYn-5G-gpX"/>
                         <constraint firstItem="BCS-k8-ID2" firstAttribute="leading" secondItem="Viv-WD-9oE" secondAttribute="leading" id="czc-HK-NIm"/>
                         <constraint firstItem="DEa-pl-ok6" firstAttribute="leading" secondItem="s7I-ni-Y2i" secondAttribute="leading" id="dRa-UO-bFd"/>
                         <constraint firstItem="chg-R9-Ydb" firstAttribute="top" secondItem="6ND-Oq-2XJ" secondAttribute="bottom" constant="30" id="epP-fY-YG2"/>
