--- a/DDAYGO/ViewController/My/Setting/Language/LanguageController.xib
+++ b/DDAYGO/ViewController/My/Setting/Language/LanguageController.xib
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina5_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -16,62 +16,75 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nPQ-B9-zlf">
-                    <rect key="frame" x="16" y="226" width="343" height="45"/>
-                    <color key="backgroundColor" red="1" green="0.49803921569999998" blue="0.0" alpha="0.65000000000000002" colorSpace="calibratedRGB"/>
+                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2NQ-Lz-Jwh">
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
+                    <subviews>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="nPQ-B9-zlf">
+                            <rect key="frame" x="16" y="98" width="343" height="45"/>
+                            <color key="backgroundColor" red="1" green="0.49803921569999998" blue="0.0" alpha="0.65000000000000002" colorSpace="calibratedRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="45" id="Wys-wF-cDu"/>
+                            </constraints>
+                            <state key="normal" title="English">
+                                <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </state>
+                            <connections>
+                                <action selector="yinwen:" destination="-1" eventType="touchUpInside" id="ypc-Zb-1Un"/>
+                            </connections>
+                        </button>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jyz-GK-qvS">
+                            <rect key="frame" x="16" y="183" width="343" height="45"/>
+                            <color key="backgroundColor" red="1" green="0.49803921569999998" blue="0.0" alpha="0.65000000000000002" colorSpace="calibratedRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="45" id="rfq-gd-sbd"/>
+                            </constraints>
+                            <state key="normal" title="简体中文">
+                                <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </state>
+                            <connections>
+                                <action selector="zhongwen:" destination="-1" eventType="touchUpInside" id="F8v-ra-oYS"/>
+                            </connections>
+                        </button>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UZH-og-6V8">
+                            <rect key="frame" x="16" y="268" width="343" height="45"/>
+                            <color key="backgroundColor" red="1" green="0.49803921569999998" blue="0.0" alpha="0.65000000000000002" colorSpace="calibratedRGB"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="45" id="Nr1-57-WZ2"/>
+                            </constraints>
+                            <state key="normal" title="繁體中文">
+                                <color key="titleColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </state>
+                            <connections>
+                                <action selector="fantizhongwen:" destination="-1" eventType="touchUpInside" id="uVN-LG-aMa"/>
+                            </connections>
+                        </button>
+                    </subviews>
                     <constraints>
-                        <constraint firstAttribute="height" constant="45" id="j3R-Yh-PWs"/>
+                        <constraint firstItem="Jyz-GK-qvS" firstAttribute="trailing" secondItem="UZH-og-6V8" secondAttribute="trailing" id="1FT-QR-lSL"/>
+                        <constraint firstItem="nPQ-B9-zlf" firstAttribute="top" secondItem="2NQ-Lz-Jwh" secondAttribute="top" constant="98" id="1bM-Su-iGH"/>
+                        <constraint firstItem="nPQ-B9-zlf" firstAttribute="leading" secondItem="Jyz-GK-qvS" secondAttribute="leading" id="1x2-dx-Crx"/>
+                        <constraint firstAttribute="bottom" secondItem="UZH-og-6V8" secondAttribute="bottom" constant="255" id="3pU-Ww-31f"/>
+                        <constraint firstItem="Jyz-GK-qvS" firstAttribute="leading" secondItem="UZH-og-6V8" secondAttribute="leading" id="Exa-HS-meN"/>
+                        <constraint firstItem="UZH-og-6V8" firstAttribute="top" secondItem="Jyz-GK-qvS" secondAttribute="bottom" constant="40" id="HSy-uY-wqb"/>
+                        <constraint firstItem="Jyz-GK-qvS" firstAttribute="top" secondItem="nPQ-B9-zlf" secondAttribute="bottom" constant="40" id="JD0-GJ-p3c"/>
+                        <constraint firstItem="nPQ-B9-zlf" firstAttribute="trailing" secondItem="Jyz-GK-qvS" secondAttribute="trailing" id="Twa-ph-XZg"/>
+                        <constraint firstItem="nPQ-B9-zlf" firstAttribute="centerX" secondItem="2NQ-Lz-Jwh" secondAttribute="centerX" id="WaK-rN-yz1"/>
+                        <constraint firstItem="nPQ-B9-zlf" firstAttribute="leading" secondItem="2NQ-Lz-Jwh" secondAttribute="leading" constant="16" id="e89-8Z-iRs"/>
+                        <constraint firstAttribute="trailing" secondItem="nPQ-B9-zlf" secondAttribute="trailing" constant="16" id="xUp-7T-WFa"/>
                     </constraints>
-                    <state key="normal" title="English">
-                        <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    </state>
-                    <connections>
-                        <action selector="yinwen:" destination="-1" eventType="touchUpInside" id="ypc-Zb-1Un"/>
-                    </connections>
-                </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Jyz-GK-qvS">
-                    <rect key="frame" x="16" y="141" width="343" height="45"/>
-                    <color key="backgroundColor" red="1" green="0.49803921569999998" blue="0.0" alpha="0.65000000000000002" colorSpace="calibratedRGB"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="45" id="Bfb-yb-hqQ"/>
-                    </constraints>
-                    <state key="normal" title="简体中文">
-                        <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    </state>
-                    <connections>
-                        <action selector="zhongwen:" destination="-1" eventType="touchUpInside" id="F8v-ra-oYS"/>
-                    </connections>
-                </button>
-                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UZH-og-6V8">
-                    <rect key="frame" x="16" y="311" width="343" height="45"/>
-                    <color key="backgroundColor" red="1" green="0.49803921569999998" blue="0.0" alpha="0.65000000000000002" colorSpace="calibratedRGB"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="45" id="7ve-1B-Gyw"/>
-                    </constraints>
-                    <state key="normal" title="繁體中文">
-                        <color key="titleColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    </state>
-                    <connections>
-                        <action selector="fantizhongwen:" destination="-1" eventType="touchUpInside" id="uVN-LG-aMa"/>
-                    </connections>
-                </button>
+                </scrollView>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstAttribute="trailing" secondItem="Jyz-GK-qvS" secondAttribute="trailing" constant="16" id="CLb-vK-FIn"/>
-                <constraint firstItem="nPQ-B9-zlf" firstAttribute="top" secondItem="Jyz-GK-qvS" secondAttribute="bottom" constant="40" id="Mvi-OC-NwS"/>
-                <constraint firstItem="Jyz-GK-qvS" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="16" id="RrT-pz-ZZG"/>
-                <constraint firstItem="nPQ-B9-zlf" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="16" id="UOn-WK-aHx"/>
-                <constraint firstAttribute="trailing" secondItem="nPQ-B9-zlf" secondAttribute="trailing" constant="16" id="Ukr-A3-KoJ"/>
-                <constraint firstItem="UZH-og-6V8" firstAttribute="top" secondItem="nPQ-B9-zlf" secondAttribute="bottom" constant="40" id="Yid-ON-X01"/>
-                <constraint firstItem="UZH-og-6V8" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="16" id="oJK-e5-Aeu"/>
-                <constraint firstItem="Jyz-GK-qvS" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="141" id="sfR-mA-bku"/>
-                <constraint firstAttribute="trailing" secondItem="UZH-og-6V8" secondAttribute="trailing" constant="16" id="tdK-E1-gVS"/>
+                <constraint firstAttribute="bottom" secondItem="2NQ-Lz-Jwh" secondAttribute="bottom" id="8M0-jM-6n9"/>
+                <constraint firstAttribute="trailing" secondItem="2NQ-Lz-Jwh" secondAttribute="trailing" id="Eto-S4-Kwr"/>
+                <constraint firstItem="2NQ-Lz-Jwh" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="NiH-W9-3dH"/>
+                <constraint firstItem="2NQ-Lz-Jwh" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="eP2-S4-8hP"/>
             </constraints>
-            <point key="canvasLocation" x="34.5" y="54.5"/>
+            <point key="canvasLocation" x="34" y="54"/>
         </view>
     </objects>
 </document>
