--- a/DDAYGO/ViewController/My/StoreManagement/Order/OrderHomePage/en.lproj/OrdersViewController.xib
+++ b/DDAYGO/ViewController/My/StoreManagement/Order/OrderHomePage/en.lproj/OrdersViewController.xib
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina5_9" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -17,14 +17,14 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1wy-ol-G54">
-                    <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                    <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FRy-6J-Et1">
-                            <rect key="frame" x="0.0" y="0.0" width="375" height="100"/>
+                            <rect key="frame" x="0.0" y="42" width="375" height="100"/>
                             <subviews>
                                 <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_left_arrow" translatesAutoresizingMaskIntoConstraints="NO" id="U96-0r-hK1">
                                     <rect key="frame" x="335" y="0.0" width="40" height="50"/>
@@ -93,7 +93,7 @@
                             </constraints>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="iNg-NB-5Xh">
-                            <rect key="frame" x="0.0" y="108" width="375" height="50"/>
+                            <rect key="frame" x="0.0" y="150" width="375" height="50"/>
                             <subviews>
                                 <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_left_arrow" translatesAutoresizingMaskIntoConstraints="NO" id="P5g-Rb-Wez">
                                     <rect key="frame" x="335" y="0.0" width="40" height="50"/>
@@ -127,7 +127,7 @@
                             </constraints>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MFD-7A-QDN">
-                            <rect key="frame" x="0.0" y="166" width="375" height="100"/>
+                            <rect key="frame" x="0.0" y="208" width="375" height="100"/>
                             <subviews>
                                 <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_left_arrow" translatesAutoresizingMaskIntoConstraints="NO" id="4hi-Hw-7qc">
                                     <rect key="frame" x="335" y="0.0" width="40" height="50"/>
@@ -196,7 +196,7 @@
                             </constraints>
                         </view>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kAD-Nk-HSh">
-                            <rect key="frame" x="0.0" y="274" width="375" height="100"/>
+                            <rect key="frame" x="0.0" y="316" width="375" height="100"/>
                             <subviews>
                                 <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_left_arrow" translatesAutoresizingMaskIntoConstraints="NO" id="BMI-5C-7TG">
                                     <rect key="frame" x="335" y="0.0" width="40" height="50"/>
@@ -266,13 +266,13 @@
                         </view>
                     </subviews>
                     <constraints>
-                        <constraint firstAttribute="bottom" secondItem="FRy-6J-Et1" secondAttribute="bottom" constant="567" id="0NB-SQ-LZS"/>
+                        <constraint firstAttribute="bottom" secondItem="FRy-6J-Et1" secondAttribute="bottom" constant="426" id="0NB-SQ-LZS"/>
                         <constraint firstItem="kAD-Nk-HSh" firstAttribute="leading" secondItem="1wy-ol-G54" secondAttribute="leading" id="4ax-5C-bIM"/>
                         <constraint firstItem="FRy-6J-Et1" firstAttribute="centerX" secondItem="1wy-ol-G54" secondAttribute="centerX" id="Aou-FQ-caN"/>
-                        <constraint firstItem="MFD-7A-QDN" firstAttribute="top" secondItem="1wy-ol-G54" secondAttribute="top" constant="166" id="D9l-0h-Rkp"/>
+                        <constraint firstItem="MFD-7A-QDN" firstAttribute="top" secondItem="1wy-ol-G54" secondAttribute="top" constant="208" id="D9l-0h-Rkp"/>
                         <constraint firstItem="MFD-7A-QDN" firstAttribute="leading" secondItem="1wy-ol-G54" secondAttribute="leading" id="GG1-4S-ofk"/>
                         <constraint firstAttribute="leading" secondItem="iNg-NB-5Xh" secondAttribute="leading" id="HIf-BV-uYm"/>
-                        <constraint firstItem="FRy-6J-Et1" firstAttribute="top" secondItem="1wy-ol-G54" secondAttribute="top" id="KgD-EO-oqf"/>
+                        <constraint firstItem="FRy-6J-Et1" firstAttribute="top" secondItem="1wy-ol-G54" secondAttribute="top" constant="42" id="KgD-EO-oqf"/>
                         <constraint firstItem="FRy-6J-Et1" firstAttribute="leading" secondItem="1wy-ol-G54" secondAttribute="leading" id="RW9-Mk-vxx"/>
                         <constraint firstItem="iNg-NB-5Xh" firstAttribute="leading" secondItem="1wy-ol-G54" secondAttribute="leading" id="Yov-RB-VW3"/>
                         <constraint firstAttribute="trailing" secondItem="kAD-Nk-HSh" secondAttribute="trailing" id="bcQ-4P-Z8h"/>
@@ -280,10 +280,10 @@
                         <constraint firstAttribute="trailing" secondItem="kAD-Nk-HSh" secondAttribute="trailing" id="k8w-eQ-qzM"/>
                         <constraint firstAttribute="leading" secondItem="kAD-Nk-HSh" secondAttribute="leading" id="kSM-uK-NpK"/>
                         <constraint firstAttribute="trailing" secondItem="MFD-7A-QDN" secondAttribute="trailing" id="kaQ-JA-1L7"/>
-                        <constraint firstItem="kAD-Nk-HSh" firstAttribute="top" secondItem="1wy-ol-G54" secondAttribute="top" constant="274" id="pDq-RR-siI"/>
+                        <constraint firstItem="kAD-Nk-HSh" firstAttribute="top" secondItem="1wy-ol-G54" secondAttribute="top" constant="316" id="pDq-RR-siI"/>
                         <constraint firstAttribute="trailing" secondItem="FRy-6J-Et1" secondAttribute="trailing" id="sL1-MQ-iyg"/>
                         <constraint firstAttribute="trailing" secondItem="iNg-NB-5Xh" secondAttribute="trailing" id="w4G-2Z-xV1"/>
-                        <constraint firstItem="iNg-NB-5Xh" firstAttribute="top" secondItem="1wy-ol-G54" secondAttribute="top" constant="108" id="wJ7-16-06y"/>
+                        <constraint firstItem="iNg-NB-5Xh" firstAttribute="top" secondItem="1wy-ol-G54" secondAttribute="top" constant="150" id="wJ7-16-06y"/>
                     </constraints>
                 </scrollView>
             </subviews>
