修改赏金彩界面
修改赏金彩界面

--- a/DDAYGO/ViewController/My/Setting/SetHomePage/Base.lproj/SettingViewController.xib
+++ b/DDAYGO/ViewController/My/Setting/SetHomePage/Base.lproj/SettingViewController.xib
@@ -96,22 +96,38 @@
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fUH-mD-Otg">
                                     <rect key="frame" x="118" y="183" width="249" height="52"/>
                                     <subviews>
-                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="e8s-H7-s4G">
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="e8s-H7-s4G">
                                             <rect key="frame" x="0.0" y="0.0" width="124.66666666666667" height="52"/>
                                             <inset key="titleEdgeInsets" minX="5" minY="0.0" maxX="0.0" maxY="0.0"/>
                                             <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="5" maxY="0.0"/>
-                                            <state key="normal" image="ic_Shopping_Choice_normal"/>
+                                            <state key="normal" image="ic_Shopping_Choice_normal">
+                                                <attributedString key="attributedTitle">
+                                                    <fragment content="男">
+                                                        <attributes>
+                                                            <font key="NSFont" size="13" name=".PingFangSC-Regular"/>
+                                                            <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                                        </attributes>
+                                                    </fragment>
+                                                </attributedString>
+                                            </state>
                                             <state key="selected" image="ic_Shopping_Choice_pressed"/>
                                             <connections>
                                                 <action selector="genderGail:" destination="-1" eventType="touchUpInside" id="pef-iH-J1i"/>
                                             </connections>
                                         </button>
-                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JlW-SS-5Mu">
+                                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" hasAttributedTitle="YES" translatesAutoresizingMaskIntoConstraints="NO" id="JlW-SS-5Mu">
                                             <rect key="frame" x="124.33333333333334" y="0.0" width="124.66666666666666" height="52"/>
                                             <inset key="titleEdgeInsets" minX="5" minY="0.0" maxX="0.0" maxY="0.0"/>
                                             <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="5" maxY="0.0"/>
                                             <state key="normal" image="ic_Shopping_Choice_normal">
-                                                <color key="titleColor" red="0.40000000600000002" green="0.40000000600000002" blue="0.40000000600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                                <attributedString key="attributedTitle">
+                                                    <fragment content="女">
+                                                        <attributes>
+                                                            <font key="NSFont" size="13" name=".PingFangSC-Regular"/>
+                                                            <paragraphStyle key="NSParagraphStyle" alignment="natural" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                                        </attributes>
+                                                    </fragment>
+                                                </attributedString>
                                             </state>
                                             <state key="selected" image="ic_Shopping_Choice_pressed"/>
                                             <connections>
