--- a/DDAYGO/ViewController/My/Lottery/ZP_InstructionBet/ZP_InstructionCell/ZP_InstructionTableViewCell.xib
+++ b/DDAYGO/ViewController/My/Lottery/ZP_InstructionBet/ZP_InstructionCell/ZP_InstructionTableViewCell.xib
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -12,42 +12,49 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="215" id="KGk-i7-Jjw" customClass="ZP_InstructionTableViewCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="215"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="435" id="KGk-i7-Jjw" customClass="ZP_InstructionTableViewCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="435"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="214.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="434.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="賞金菜開獎號碼以美國PowerBall開獎時間為準。網址為 http://www.powerball.com" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Sp4-6M-Kaa">
-                        <rect key="frame" x="47" y="11" width="257" height="18"/>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg_prize_explan" translatesAutoresizingMaskIntoConstraints="NO" id="3gJ-YD-bCj">
+                        <rect key="frame" x="5" y="10" width="19" height="19"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="18" id="1gP-jO-Krk"/>
+                            <constraint firstAttribute="width" constant="19" id="M6v-Ub-4La"/>
+                            <constraint firstAttribute="height" constant="19" id="ikg-Kb-niA"/>
                         </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="奖项说明" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vVP-sU-ssB">
+                        <rect key="frame" x="34" y="11" width="45" height="19"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="19" id="Ke2-A4-zLR"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="11"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_explan_first" translatesAutoresizingMaskIntoConstraints="NO" id="DqI-I5-sfk">
-                        <rect key="frame" x="9" y="11" width="18" height="18"/>
-                        <constraints>
-                            <constraint firstAttribute="height" constant="18" id="S4n-Oh-fHl"/>
-                            <constraint firstAttribute="width" constant="18" id="ny0-9P-JBk"/>
-                        </constraints>
-                    </imageView>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="FKG-DN-Zyh">
+                        <rect key="frame" x="7" y="38" width="305" height="391"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </view>
                 </subviews>
                 <constraints>
-                    <constraint firstItem="DqI-I5-sfk" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="1Yq-bH-BmU"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="Sp4-6M-Kaa" secondAttribute="trailing" id="kha-IW-DcI"/>
-                    <constraint firstItem="DqI-I5-sfk" firstAttribute="top" secondItem="Sp4-6M-Kaa" secondAttribute="top" id="lNh-y9-SdW"/>
-                    <constraint firstItem="DqI-I5-sfk" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="9" id="nc3-f1-fXf"/>
-                    <constraint firstItem="Sp4-6M-Kaa" firstAttribute="leading" secondItem="DqI-I5-sfk" secondAttribute="trailing" constant="20" id="z5Z-uP-R5s"/>
+                    <constraint firstAttribute="bottom" secondItem="FKG-DN-Zyh" secondAttribute="bottom" constant="5.5" id="1ed-2n-dAq"/>
+                    <constraint firstItem="FKG-DN-Zyh" firstAttribute="top" secondItem="vVP-sU-ssB" secondAttribute="bottom" constant="8" id="4HW-9p-y47"/>
+                    <constraint firstAttribute="trailing" secondItem="FKG-DN-Zyh" secondAttribute="trailing" constant="8" id="5ue-eD-odg"/>
+                    <constraint firstItem="vVP-sU-ssB" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" id="Esy-yj-6D4"/>
+                    <constraint firstItem="FKG-DN-Zyh" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="7" id="R0c-Uy-YdJ"/>
+                    <constraint firstItem="3gJ-YD-bCj" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="5" id="S1L-nX-6tP"/>
+                    <constraint firstItem="3gJ-YD-bCj" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="hZA-6I-vKj"/>
+                    <constraint firstItem="vVP-sU-ssB" firstAttribute="leading" secondItem="3gJ-YD-bCj" secondAttribute="trailing" constant="10" id="iwh-gy-6bb"/>
                 </constraints>
             </tableViewCellContentView>
-            <point key="canvasLocation" x="34" y="139.5"/>
+            <point key="canvasLocation" x="34" y="29.5"/>
         </tableViewCell>
     </objects>
     <resources>
-        <image name="icon_explan_first" width="20" height="23"/>
+        <image name="bg_prize_explan" width="23" height="23"/>
     </resources>
 </document>
