--- a/DDAYGO/ViewController/My/Lottery/ZP_LotteryBet/BetViewController.xib
+++ b/DDAYGO/ViewController/My/Lottery/ZP_LotteryBet/BetViewController.xib
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
+    <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
@@ -17,63 +17,19 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="KMg-Qk-JMf">
-                    <rect key="frame" x="193" y="0.0" width="1" height="20"/>
-                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="20" id="2fp-2j-Iv2"/>
-                        <constraint firstAttribute="width" constant="1" id="jaq-Aa-ryu"/>
-                    </constraints>
-                </view>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="WPR-qz-bcn">
-                    <rect key="frame" x="0.0" y="45" width="375" height="567"/>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="1" translatesAutoresizingMaskIntoConstraints="NO" id="WPR-qz-bcn">
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="513"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <connections>
                         <outlet property="dataSource" destination="-1" id="iHm-UZ-Hdd"/>
                         <outlet property="delegate" destination="-1" id="Gre-HA-gNC"/>
                     </connections>
                 </tableView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="距2014137期截止：" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0yz-RI-V1l">
-                    <rect key="frame" x="75" y="2" width="118" height="20"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="20" id="luP-h7-qCD"/>
-                    </constraints>
-                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                    <color key="textColor" red="0.26051741839999998" green="0.2605243921" blue="0.260520637" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="16天22小时15分" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gHW-7b-1Id">
-                    <rect key="frame" x="194" y="2" width="97" height="20"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="20" id="krM-jp-rew"/>
-                    </constraints>
-                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                    <color key="textColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="￥165,973926" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i8h-oZ-Sxi">
-                    <rect key="frame" x="144.5" y="24" width="86" height="16"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                    <color key="textColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="奖池：" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rXX-oJ-yIL">
-                    <rect key="frame" x="104.5" y="24" width="40" height="16"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                    <color key="textColor" red="0.26051741839999998" green="0.2605243921" blue="0.260520637" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="元" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bSL-Lw-Kwz">
-                    <rect key="frame" x="230.5" y="24" width="13.5" height="16"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
-                    <color key="textColor" red="0.26051741839999998" green="0.2605243921" blue="0.260520637" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-                    <nil key="highlightedColor"/>
-                </label>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="fFB-vJ-K05">
-                    <rect key="frame" x="0.0" y="612" width="375" height="55"/>
+                    <rect key="frame" x="0.0" y="513" width="320" height="55"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vMK-rB-Bii">
                             <rect key="frame" x="12" y="6" width="80" height="43"/>
@@ -94,7 +50,7 @@
                             </userDefinedRuntimeAttributes>
                         </button>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Vag-ZQ-eQk">
-                            <rect key="frame" x="305" y="0.0" width="70" height="55"/>
+                            <rect key="frame" x="250" y="0.0" width="70" height="55"/>
                             <color key="backgroundColor" red="0.98431372549019602" green="0.5607843137254902" blue="0.14509803921568626" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="70" id="rWP-uC-2b5"/>
@@ -118,25 +74,13 @@
             </subviews>
             <color key="backgroundColor" red="0.92143100499999997" green="0.92145264149999995" blue="0.92144101860000005" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="KMg-Qk-JMf" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" constant="6" id="0Kz-Mh-m6m"/>
                 <constraint firstItem="fFB-vJ-K05" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="1DR-Db-cqu"/>
-                <constraint firstItem="KMg-Qk-JMf" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="6EX-Xj-Q89"/>
                 <constraint firstItem="WPR-qz-bcn" firstAttribute="trailing" secondItem="i5M-Pr-FkT" secondAttribute="trailing" id="6f3-8I-bdf"/>
                 <constraint firstItem="WPR-qz-bcn" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="6fb-Cc-vgT"/>
-                <constraint firstItem="rXX-oJ-yIL" firstAttribute="top" secondItem="i8h-oZ-Sxi" secondAttribute="top" id="BWb-OJ-4OP"/>
                 <constraint firstItem="fFB-vJ-K05" firstAttribute="top" secondItem="WPR-qz-bcn" secondAttribute="bottom" id="JZI-Vg-hxS"/>
-                <constraint firstItem="gHW-7b-1Id" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="2" id="K50-rv-mbM"/>
-                <constraint firstItem="bSL-Lw-Kwz" firstAttribute="top" secondItem="i8h-oZ-Sxi" secondAttribute="top" id="QGn-hC-ggk"/>
-                <constraint firstItem="gHW-7b-1Id" firstAttribute="leading" secondItem="KMg-Qk-JMf" secondAttribute="trailing" id="Rw8-ae-ZMj"/>
                 <constraint firstAttribute="trailing" secondItem="fFB-vJ-K05" secondAttribute="trailing" id="YKh-3i-QuG"/>
-                <constraint firstItem="i8h-oZ-Sxi" firstAttribute="leading" secondItem="rXX-oJ-yIL" secondAttribute="trailing" id="a0i-Y7-SAW"/>
-                <constraint firstItem="i8h-oZ-Sxi" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="fNs-vb-c0t"/>
-                <constraint firstItem="KMg-Qk-JMf" firstAttribute="leading" secondItem="0yz-RI-V1l" secondAttribute="trailing" id="hAt-MH-buy"/>
-                <constraint firstItem="bSL-Lw-Kwz" firstAttribute="leading" secondItem="i8h-oZ-Sxi" secondAttribute="trailing" id="hBf-dU-4R0"/>
-                <constraint firstItem="WPR-qz-bcn" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="45" id="jfF-s2-3xJ"/>
-                <constraint firstItem="i8h-oZ-Sxi" firstAttribute="top" secondItem="0yz-RI-V1l" secondAttribute="bottom" constant="2" id="nVF-rg-LFQ"/>
+                <constraint firstItem="WPR-qz-bcn" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="jfF-s2-3xJ"/>
                 <constraint firstAttribute="bottom" secondItem="fFB-vJ-K05" secondAttribute="bottom" id="qfq-y0-qu1"/>
-                <constraint firstItem="0yz-RI-V1l" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="2" id="s2d-eS-KPq"/>
             </constraints>
             <point key="canvasLocation" x="24.5" y="51.5"/>
         </view>
