--- a/DDAYGO/ViewController/My/Lottery/ZP_CheckMore/ZP_CheckMoreCell/ZP_CheckMoreCollectionCell.xib
+++ b/DDAYGO/ViewController/My/Lottery/ZP_CheckMore/ZP_CheckMoreCell/ZP_CheckMoreCollectionCell.xib
@@ -11,14 +11,14 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="ZP_LotteryCollectionViewCell">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" restorationIdentifier="ZP_CheckMoreCollectionCell" reuseIdentifier="ZP_CheckMoreCollectionCell" id="gTV-IL-0wX" customClass="ZP_CheckMoreCollectionCell">
             <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                 <rect key="frame" x="0.0" y="0.0" width="40" height="40"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="THb-W7-kg2">
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ShO-Pe-REs">
                         <rect key="frame" x="5" y="5" width="30" height="30"/>
                         <state key="normal" title="1" backgroundImage="bg_lottery_whiteball">
                             <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
@@ -27,13 +27,13 @@
                 </subviews>
             </view>
             <constraints>
-                <constraint firstItem="THb-W7-kg2" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="6AN-fz-cdO"/>
-                <constraint firstItem="THb-W7-kg2" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="5" id="Fir-z2-ckz"/>
-                <constraint firstItem="THb-W7-kg2" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="LHB-Un-t5g"/>
-                <constraint firstItem="THb-W7-kg2" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="5" id="g1h-u9-A2l"/>
+                <constraint firstItem="ShO-Pe-REs" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="5" id="PIU-zA-Osm"/>
+                <constraint firstItem="ShO-Pe-REs" firstAttribute="centerY" secondItem="gTV-IL-0wX" secondAttribute="centerY" id="R5l-NN-6px"/>
+                <constraint firstItem="ShO-Pe-REs" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="5" id="SnU-y9-GKI"/>
+                <constraint firstItem="ShO-Pe-REs" firstAttribute="centerX" secondItem="gTV-IL-0wX" secondAttribute="centerX" id="toC-dB-87e"/>
             </constraints>
             <connections>
-                <outlet property="countBut" destination="THb-W7-kg2" id="PLb-N5-uUt"/>
+                <outlet property="countBut" destination="ShO-Pe-REs" id="uuR-H2-diV"/>
             </connections>
             <point key="canvasLocation" x="34" y="54"/>
         </collectionViewCell>
