--- a/DDAYGO/ViewController/My/Lottery/ZP_LotteryBet/BetHeaderCell/BetTwoTVCell.xib
+++ b/DDAYGO/ViewController/My/Lottery/ZP_LotteryBet/BetHeaderCell/BetTwoTVCell.xib
@@ -6,40 +6,30 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="BetTwoTVCell" rowHeight="30" id="KGk-i7-Jjw" customClass="BetTwoTVCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="76"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="BetTwoTVCell" rowHeight="12" id="KGk-i7-Jjw" customClass="BetTwoTVCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="58"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="75.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="57.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rbo-GW-YRu">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="35"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="选定号码" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wJd-2a-WHR">
-                                <rect key="frame" x="8" y="8" width="42" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="isT-Cp-4m5">
+                        <rect key="frame" x="0.0" y="1" width="320" height="1"/>
+                        <color key="backgroundColor" red="0.74509803919999995" green="0.74509803919999995" blue="0.74509803919999995" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="35" id="qPm-kV-eb2"/>
+                            <constraint firstAttribute="height" constant="1" id="seH-72-T4r"/>
                         </constraints>
                     </view>
                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="Pbc-Pj-vcC">
-                        <rect key="frame" x="0.0" y="35" width="191" height="40"/>
+                        <rect key="frame" x="0.0" y="27" width="191" height="30"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="40" id="OD1-Vi-3ri"/>
+                            <constraint firstAttribute="height" constant="30" id="mj3-AL-9ke"/>
                         </constraints>
                         <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="ces-yv-lev">
                             <size key="itemSize" width="50" height="50"/>
@@ -48,11 +38,20 @@
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                     </collectionView>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bd0-1c-X7n">
-                        <rect key="frame" x="235" y="46" width="69" height="19"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="选定的号码" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UY5-ek-gdq">
+                        <rect key="frame" x="10" y="6" width="71.5" height="21"/>
                         <constraints>
-                            <constraint firstAttribute="width" constant="69" id="99y-rz-jXj"/>
-                            <constraint firstAttribute="height" constant="19" id="ACN-wd-HAo"/>
+                            <constraint firstAttribute="height" constant="21" id="0nP-7O-5b3"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Bd0-1c-X7n">
+                        <rect key="frame" x="235" y="33" width="69" height="19"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="69" id="5rI-Bp-rvs"/>
+                            <constraint firstAttribute="height" constant="19" id="hxT-ej-a1x"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="10"/>
                         <state key="normal" title="删除"/>
@@ -70,19 +69,20 @@
                     </button>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="trailing" secondItem="Pbc-Pj-vcC" secondAttribute="trailing" constant="129" id="3MP-gu-eeM"/>
-                    <constraint firstAttribute="trailing" secondItem="rbo-GW-YRu" secondAttribute="trailing" id="6vP-Bv-RsY"/>
-                    <constraint firstItem="Bd0-1c-X7n" firstAttribute="top" secondItem="rbo-GW-YRu" secondAttribute="bottom" constant="11" id="HdD-yW-3GT"/>
-                    <constraint firstItem="rbo-GW-YRu" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="IhK-YE-bPZ"/>
-                    <constraint firstItem="Bd0-1c-X7n" firstAttribute="trailing" secondItem="H2p-sc-9uM" secondAttribute="trailingMargin" id="Kug-wP-dMP"/>
-                    <constraint firstItem="Bd0-1c-X7n" firstAttribute="leading" secondItem="Pbc-Pj-vcC" secondAttribute="trailing" constant="44" id="Vzu-hC-JXp"/>
-                    <constraint firstItem="Pbc-Pj-vcC" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="atQ-80-GAg"/>
-                    <constraint firstItem="Bd0-1c-X7n" firstAttribute="bottom" secondItem="H2p-sc-9uM" secondAttribute="bottomMargin" id="cIW-mI-Wvg"/>
-                    <constraint firstItem="rbo-GW-YRu" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="cTf-AA-OMA"/>
-                    <constraint firstItem="Pbc-Pj-vcC" firstAttribute="top" secondItem="rbo-GW-YRu" secondAttribute="bottom" id="e3P-02-7Qd"/>
+                    <constraint firstItem="isT-Cp-4m5" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="1" id="2ph-ib-1eX"/>
+                    <constraint firstItem="UY5-ek-gdq" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="954-7y-qDo"/>
+                    <constraint firstItem="Bd0-1c-X7n" firstAttribute="leading" secondItem="Pbc-Pj-vcC" secondAttribute="trailing" constant="44" id="IDQ-vN-65U"/>
+                    <constraint firstItem="isT-Cp-4m5" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="Iml-cu-qZ8"/>
+                    <constraint firstAttribute="trailing" secondItem="isT-Cp-4m5" secondAttribute="trailing" id="KWI-Wa-tOd"/>
+                    <constraint firstAttribute="trailing" secondItem="Bd0-1c-X7n" secondAttribute="trailing" constant="16" id="b9j-Gr-wSu"/>
+                    <constraint firstItem="Bd0-1c-X7n" firstAttribute="leading" secondItem="Pbc-Pj-vcC" secondAttribute="trailing" constant="44" id="c69-fV-OiM"/>
+                    <constraint firstItem="Bd0-1c-X7n" firstAttribute="top" secondItem="isT-Cp-4m5" secondAttribute="bottom" constant="31" id="ckO-GL-hwj"/>
+                    <constraint firstItem="Pbc-Pj-vcC" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="eaz-lI-odj"/>
+                    <constraint firstItem="Pbc-Pj-vcC" firstAttribute="top" secondItem="UY5-ek-gdq" secondAttribute="bottom" id="nAf-33-njr"/>
+                    <constraint firstItem="UY5-ek-gdq" firstAttribute="top" secondItem="isT-Cp-4m5" secondAttribute="bottom" constant="4" id="yEM-sO-Gew"/>
                 </constraints>
             </tableViewCellContentView>
-            <point key="canvasLocation" x="69" y="-12"/>
+            <point key="canvasLocation" x="69" y="-21"/>
         </tableViewCell>
     </objects>
 </document>
